Use requestAnimationFrame (thanks @stankur!), Updated footer, fixed scrollbar situation for node cards

--- a/static/vkg.css
+++ b/static/vkg.css
@@ -456,7 +456,7 @@ a
 }
 
 .nodeCard>*{
-    overflow: scroll;
+    overflow-x: auto;
     width: auto;
     display: block;
 }
